<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 Santiago Valdarrama
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at 
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
 
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/dividerImageView"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:stretchColumns="*" >

    <TableRow>

        <TextView
            style="@style/stock_overview_table_label"
            android:layout_width="60dp"
            android:text="@string/stock_overview_last_trade_date_label" />

        <TextView
            android:id="@+id/lastTradeDateTextView"
            style="@style/stock_overview_table_value" />

        <TextView
            style="@style/stock_overview_table_label"
            android:layout_width="60dp"
            android:text="@string/stock_overview_market_capital_label" />

        <TextView
            android:id="@+id/marketCapitalTextView"
            style="@style/stock_overview_table_value" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/stock_overview_table_label"
            android:layout_width="60dp"
            android:text="@string/stock_overview_open_label" />

        <TextView
            android:id="@+id/openTextView"
            style="@style/stock_overview_table_value" />

        <TextView
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_pe_label" />

        <TextView
            android:id="@+id/peRatioTextView"
            style="@style/stock_overview_table_value" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_range_label" />

        <TextView
            android:id="@+id/rangeTextView"
            style="@style/stock_overview_table_value" />

        <TextView
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_eps_label" />

        <TextView
            android:id="@+id/epsTextView"
            style="@style/stock_overview_table_value" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_52_weeks_label" />

        <TextView
            android:id="@+id/yearRangeTextView"
            style="@style/stock_overview_table_value" />

        <TextView
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_dividend_label" />

        <TextView
            android:id="@+id/dividendTextView"
            style="@style/stock_overview_table_value" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/volumeLabelTextView"
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_volume_label" />

        <TextView
            android:id="@+id/volumeTextView"
            style="@style/stock_overview_table_value" />

        <TextView
            style="@style/stock_overview_table_label"
            android:text="@string/stock_overview_target_price_label" />

        <TextView
            android:id="@+id/targetPriceTextView"
            style="@style/stock_overview_table_value" />
    </TableRow>
</TableLayout>